@@ -1,13 +1,15 @@
 <?php
 // $Id$
 $content .=
-"<h3>Your site</h3>
-<p>You can now access the <a href='../index.php'>home page of your site</a>.</p>
-<h3>Support</h3>
+"<h3>Support</h3>
 <ul class=\"diags\">
 <li><a href='http://www.impresscms.org/' target='_blank'>www.impresscms.org</a> - Project Homepage</p></li>" .
 "<li><a href='http://community.impresscms.org/' target='_blank'>community.impresscms.org</a> - Support</li>" .
 "<li><a href='http://addons.impresscms.org/' target='_blank'>addons.impresscms.org</a> - Modules & Themes</li>" .
 "<li><a href='http://wiki.impresscms.org/' target='_blank'>wiki.impresscms.org</a> - Community Documentation</li>".
-"</ul>";
+"</ul>
+
+<h3>Your site</h3>
+<p>You can now access the home page of your site, by clicking on the button below and finishing the wizard.</p>
+";
 ?>
